--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title>Fuck NAME</title>
+<title>NAME</title>
 </head>
 <body>
 <img src="https://scontent.fsgn3-1.fna.fbcdn.net/v/t1.0-9/14522760_163956487390758_8480342245139729089_n.jpg?oh=d33e0d4dbda667f73798789c8056b20d&oe=595947E9"/>
