--- a/index.html
+++ b/index.html
@@ -3,6 +3,22 @@
 <title>NAME</title>
 </head>
 <body>
-<img src="https://scontent.fsgn3-1.fna.fbcdn.net/v/t1.0-9/14522760_163956487390758_8480342245139729089_n.jpg?oh=d33e0d4dbda667f73798789c8056b20d&oe=595947E9"/>
-</body>
+  <table>
+    <thead>
+      <tr>
+    <td>MSSV</td>
+    <td>Họ tên</td>
+    <td>Hình</td>
+      </tr>
+    </thead>
+  <tbody>
+<tr>
+    <td>1612847</td>
+    <td>Đỗ Hoàng Anh Duy</td>
+<td>
+  <img width=50% height=50% src="https://scontent.fsgn3-1.fna.fbcdn.net/v/t1.0-9/14522760_163956487390758_8480342245139729089_n.jpg?oh=d33e0d4dbda667f73798789c8056b20d&oe=595947E9"/>
+    </td>
+    </tr>
+    </tbody>
+    </body>
 </html>
