--- a/index.html
+++ b/index.html
@@ -24,28 +24,28 @@
     <td>1612847</td>
     <td>Đỗ Hoàng Anh Duy</td>
 <td>
-  <img width=50% height=50% src="https://scontent.fsgn3-1.fna.fbcdn.net/v/t1.0-9/14522760_163956487390758_8480342245139729089_n.jpg?oh=d33e0d4dbda667f73798789c8056b20d&oe=595947E9"/>
+  <img class="img-responsive img-circle" src="https://scontent.fsgn3-1.fna.fbcdn.net/v/t1.0-9/14522760_163956487390758_8480342245139729089_n.jpg?oh=d33e0d4dbda667f73798789c8056b20d&oe=595947E9"/>
     </td>
     </tr>
     <tr>
     <td>1612844</td>
     <td>Huỳnh Ngọc Đỉnh</td>
 <td>
-  <img width=50% height=50% src="https://scontent.fsgn3-1.fna.fbcdn.net/v/t1.0-9/14522760_163956487390758_8480342245139729089_n.jpg?oh=d33e0d4dbda667f73798789c8056b20d&oe=595947E9"/>
+  <img class="img-responsive img-circle" src="https://scontent.fsgn3-1.fna.fbcdn.net/v/t1.0-9/14522760_163956487390758_8480342245139729089_n.jpg?oh=d33e0d4dbda667f73798789c8056b20d&oe=595947E9"/>
     </td>
     </tr>
     <tr>
     <td>1612865</td>
     <td>Lương Tấn Khang</td>
 <td>
-  <img width=50% height=50% src="https://scontent.fsgn3-1.fna.fbcdn.net/v/t1.0-9/14522760_163956487390758_8480342245139729089_n.jpg?oh=d33e0d4dbda667f73798789c8056b20d&oe=595947E9"/>
+  <img class="img-responsive img-circle" src="https://scontent.fsgn3-1.fna.fbcdn.net/v/t1.0-9/14522760_163956487390758_8480342245139729089_n.jpg?oh=d33e0d4dbda667f73798789c8056b20d&oe=595947E9"/>
     </td>
     </tr>
     <tr>
     <td>1612902</td>
     <td>Phan Quốc Tuấn</td>
 <td>
-  <img width=50% height=50% src="https://scontent.fsgn3-1.fna.fbcdn.net/v/t1.0-9/14522760_163956487390758_8480342245139729089_n.jpg?oh=d33e0d4dbda667f73798789c8056b20d&oe=595947E9"/>
+  <img class="img-responsive img-circle" src="https://scontent.fsgn3-1.fna.fbcdn.net/v/t1.0-9/14522760_163956487390758_8480342245139729089_n.jpg?oh=d33e0d4dbda667f73798789c8056b20d&oe=595947E9"/>
     </td>
     </tr>
     </tbody>
