--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
   <table class="table table-hover">
     <thead>
       <tr>
-    <td>MSSV</td>
-    <td>Họ tên</td>
-    <td>Hình</td>
+    <td width="15%">MSSV</td>
+    <td width="255%">Họ tên</td>
+    <td width="60%">Hình</td>
       </tr>
     </thead>
   <tbody>
@@ -25,7 +25,9 @@
     <td>Đỗ Hoàng Anh Duy</td>
 <td>
   <img class="img-responsive img-circle" 
-       src="https://scontent.fsgn3-1.fna.fbcdn.net/v/t1.0-9/14522760_163956487390758_8480342245139729089_n.jpg?oh=d33e0d4dbda667f73798789c8056b20d&oe=595947E9"/>
+       src="https://scontent.fsgn3-1.fna.fbcdn.net/v/t1.0-9/14522760_163956487390758_8480342245139729089_n.jpg?oh=d33e0d4dbda667f73798789c8056b20d&oe=595947E9"
+       width="480px" height="480px"
+       />
     </td>
     </tr>
     <tr>
@@ -33,7 +35,9 @@
     <td>Huỳnh Ngọc Đỉnh</td>
 <td>
   <img class="img-responsive img-circle" 
-       src="https://scontent.fsgn3-1.fna.fbcdn.net/v/t1.0-9/10574470_1751958735034993_5152010222441305083_n.jpg?oh=930ef330650997e718b1c242698beebb&oe=596F382C"/>
+       src="https://scontent.fsgn3-1.fna.fbcdn.net/v/t1.0-9/10574470_1751958735034993_5152010222441305083_n.jpg?oh=930ef330650997e718b1c242698beebb&oe=596F382C"
+       width="480px" height="480px"
+       />
     </td>
     </tr>
     <tr>
@@ -41,7 +45,9 @@
     <td>Lương Tấn Khang</td>
 <td>
   <img class="img-responsive img-circle" 
-       src="https://scontent.fsgn3-1.fna.fbcdn.net/v/t1.0-9/10464356_670062473108286_5130932936490585905_n.jpg?oh=e6a35cedd08f33c4e81b40d3c3784575&oe=5960E483"/>
+       src="https://scontent.fsgn3-1.fna.fbcdn.net/v/t1.0-9/10464356_670062473108286_5130932936490585905_n.jpg?oh=e6a35cedd08f33c4e81b40d3c3784575&oe=5960E483"
+       width="480px" height="480px"
+       />
     </td>
     </tr>
     <tr>
@@ -49,7 +55,9 @@
     <td>Phan Quốc Tuấn</td>
 <td>
   <img class="img-responsive img-circle" 
-       src="https://scontent.fsgn3-1.fna.fbcdn.net/v/t1.0-9/15590357_213058585817312_1068871055190593643_n.jpg?oh=e4edf9ce7b234383e4bbedc9aabd685b&oe=596A51C1"/>
+       src="https://scontent.fsgn3-1.fna.fbcdn.net/v/t1.0-9/15590357_213058585817312_1068871055190593643_n.jpg?oh=e4edf9ce7b234383e4bbedc9aabd685b&oe=596A51C1"
+       width="480px" height="480px"
+       />
     </td>
     </tr>
     </tbody>
