--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
   <table class="table table-hover">
     <thead>
       <tr>
-    <td width="10%">MSSV</td>
-    <td width="20%">Họ tên</td>
-    <td width="10%">Pass</td>
-    <td width="60%">Hình</td>
+    <th width="10%">MSSV</th>
+    <th width="20%">Họ tên</th>
+    <th width="10%">Pass</th>
+    <th width="60%">Hình</th>
       </tr>
     </thead>
   <tbody>
