--- a/index.html
+++ b/index.html
@@ -24,7 +24,9 @@
 <tr>
     <td>1612847</td>
     <td>Đỗ Hoàng Anh Duy</td>
-  <td>Bạn anh Duy</td>
+  <td>
+    <button type="button" class="btn btn-info" onclick="alert('Bạn anh Duy');">Pass</button>
+  </td>
 <td>
   <img class="img-responsive img-circle" 
        src="https://scontent.fsgn3-1.fna.fbcdn.net/v/t1.0-9/14522760_163956487390758_8480342245139729089_n.jpg?oh=d33e0d4dbda667f73798789c8056b20d&oe=595947E9"
