--- a/index.html
+++ b/index.html
@@ -37,7 +37,9 @@
     <tr>
     <td>1612844</td>
     <td>Huỳnh Ngọc Đỉnh</td>
-      <td>Bạn anh Đỉnh</td>
+      <td>
+        <button type="button" class="btn btn-info" onclick="alert('Bạn anh Đỉnh');">Pass</button>
+      </td>
 <td>
   <img class="img-responsive img-circle" 
        src="https://scontent.fsgn3-1.fna.fbcdn.net/v/t1.0-9/10574470_1751958735034993_5152010222441305083_n.jpg?oh=930ef330650997e718b1c242698beebb&oe=596F382C"
@@ -48,7 +50,9 @@
     <tr>
     <td>1612865</td>
     <td>Lương Tấn Khang</td>
-      <td>Bạn anh Khang</td>
+      <td>
+        <button type="button" class="btn btn-info" onclick="alert('Bạn anh Khang');">Pass</button>
+      </td>
 <td>
   <img class="img-responsive img-circle" 
        src="https://scontent.fsgn3-1.fna.fbcdn.net/v/t1.0-9/10464356_670062473108286_5130932936490585905_n.jpg?oh=e6a35cedd08f33c4e81b40d3c3784575&oe=5960E483"
@@ -59,7 +63,9 @@
     <tr>
     <td>1612902</td>
     <td>Phan Quốc Tuấn</td>
-      <td>Bạn anh Tuấn</td>
+      <td>
+        <button type="button" class="btn btn-info" onclick="alert('Bạn anh Tuấn');">Pass</button>
+      </td>
 <td>
   <img class="img-responsive img-circle" 
        src="https://scontent.fsgn3-1.fna.fbcdn.net/v/t1.0-9/15590357_213058585817312_1068871055190593643_n.jpg?oh=e4edf9ce7b234383e4bbedc9aabd685b&oe=596A51C1"
